# readapt

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml  labeler.yml  pr-title-checker-config.json  release-drafter.yml
.github/workflows/: pr-manager.yml  release-drafer.yml  tester.yml
src/: lib.rs
src/bandits/: arm.rs  bandit.rs  bench.rs  mod.rs
src/mdp/: environment.rs  mod.rs  model.rs  optimizer.rs  policy.rs
