[package]
name = "readapt"
version = "0.1.1"
authors = [ "Evangelos Michelioudakis <vagmcs@gmail.com>" ]
edition = "2021"
description = "A reinforcement learning library"
documentation = "https://docs.rs/readapt"
readme = "README.md"
repository = "https://github.com/vagmcs/readapt"
license = "MIT"
keywords = [ "ai", "machine-learning", "reinforcement" ]
categories = [ "algorithms", "mathematics", "science" ]


[dependencies]
rand = "0.9.1"
rand_distr = "0.4.3"
