[package]
name = "readapt"
version = "0.1.1"
authors = [ "Evangelos Michelioudakis <vagmcs@gmail.com>" ]
edition = "2021"
description = "A reinforcement learning library"
documentation = "https://docs.rs/readapt"
readme = "README.md"
repository = "https://github.com/vagmcs/readapt"
license = "MIT"
keywords = [ "ai", "machine-learning", "reinforcement" ]
categories = [ "algorithms", "mathematics", "science" ]


[package.metadata.precommit]
fmt = "cargo fmt -- --check 2>&1"
test = "cargo test 2>&1"


[dependencies]
pre-commit = "0.5.2"
rand = "0.8.5"
rand_distr = "0.4.3"
